fix unwatnted overflow

--- a/styles/Note.module.sass
+++ b/styles/Note.module.sass
@@ -49,7 +49,7 @@
         height: 1px
         background-color: $noteDividerColor
     &_text
-        margin-top: 1rem
+        margin-top: 0.5rem
         line-height: 1rem
         color: $noteTextColor
         word-wrap: break-word
