--- a/styles/ThoughtsForm.module.sass
+++ b/styles/ThoughtsForm.module.sass
@@ -6,6 +6,7 @@
     flex-direction: column
     padding: 16px 16px 0px
     margin: 0px 20px 10px
+    border-radius: 4px
     min-width: 350px
     background-color: $thoughtsFormBg
     color: $thoughtsFormColor
@@ -22,7 +23,7 @@
         label
             font-size: 12px
             width: fit-content
-            min-width: 120px
+            // min-width: 120px
             text-transform: capitalize
             span
                 font-size: 8px
@@ -57,9 +58,8 @@
             height: 100px
         input, textarea
             @include noFocusOutline
-            min-width: 250px
             margin-left: 25px
-            width: 280px
+            width: 100%
 .importanceLevel
     display: flex
     position: relative
