--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -10,7 +10,7 @@
 body
   background-color: $bodyBgColor
   width: 100vw                   
-  height: 100vh
+  height: 100%
   max-height: 100vh
   max-width: 100vw
 #__next
